--- a/preamble.tex
+++ b/preamble.tex
@@ -220,7 +220,7 @@
 \pgfkeys{/tikz/day yshift=\cellheight+2mm+2mm}% yshift --- вертикальный сдвиг между датами
 
 \newlength{\cellheight}
-\setlength{\cellheight}{21mm}
+\setlength{\cellheight}{18mm}
 \newlength{\cellwidth}
 \setlength{\cellwidth}{34mm}
 
@@ -265,7 +265,8 @@
 
 %\deftripstyle{my}{\includegraphics[width=48mm]{pics/2015}}{}{}{}{\color{navy}\footnotesize\sf{НТЦ Метротек, +7 (812) 340-0118, +7 (812) 340-0119 }}{}
 
-\deftripstyle{my}{\includegraphics[width=48mm]{pics/2015}}{}{}{}{\raisebox{1ex}{\begin{tabular}[t]{cc} \color{navy}\footnotesize\sf{НТЦ Метротек, +7 (812) 340-0118, +7 (812) 340-0119}\\ \color{navy}\footnotesize\sf{metrotek.spb.ru}\end{tabular}}}{}
+\deftripstyle{y2014}{\includegraphics[width=48mm]{pics/2014}}{}{}{}{\raisebox{1ex}{\begin{tabular}[t]{cc} \color{navy}\footnotesize\sf{НТЦ Метротек, metrotek.spb.ru}\end{tabular}}}{}
+\deftripstyle{y2015}{\includegraphics[width=48mm]{pics/2015}}{}{}{}{\raisebox{1ex}{\begin{tabular}[t]{cc} \color{navy}\footnotesize\sf{НТЦ Метротек, metrotek.spb.ru}\end{tabular}}}{}
 
 
 %\setheadtopline{.1pt}[\color{blue}]
